@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.119 2007/09/11 05:03:30 bjs Exp $
+# $NetBSD: Makefile,v 1.120 2007/09/20 10:19:03 abs Exp $
 
-DISTNAME=	cpuflags-1.16
+DISTNAME=	cpuflags-1.17
 CATEGORIES=	sysutils
 MASTER_SITES=	# empty
 DISTFILES=	# empty
